<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TextView.Label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context="com.awesome.comet81.finalgradecalculatorRSkinner.GradeCalculatorActivity">

    <TextView
        style="@style/TextView.Label"
        android:text="@string/grade_amount_label"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content" />

    <TextView
        android:text="@string/desired_grade_label"
        style="@style/TextView.Label"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/final_percent_label"
        style="@style/TextView.Label"
        android:id="@+id/textView3"
        android:layout_below="@+id/desired_grade_editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/TextView.Label"
        android:text="@string/gradeNeededToPass"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/amountNeeded_textView"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        style="@style/EditText"
        android:id="@+id/current_grade_editText"
        android:gravity="top"
        android:layout_weight="1"
        android:text="@string/current_grade_editTxt"
        android:inputType="numberDecimal"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <EditText
        style="@style/EditText"
        android:id="@+id/desired_grade_editText"
        android:gravity="top"
        android:layout_weight="1"
        android:text="@string/desired_grade_editTxt"
        android:inputType="numberDecimal"
        android:layout_below="@+id/current_grade_editText"
        android:layout_alignLeft="@+id/current_grade_editText"
        android:layout_alignStart="@+id/current_grade_editText"
        android:layout_alignRight="@+id/current_grade_editText"
        android:layout_alignEnd="@+id/current_grade_editText" />

    <TextView
        style="@style/TextView.Label"
        android:text="@string/amountNeeded"
        android:id="@+id/amountNeeded_textView"
        android:layout_below="@+id/seekbarTextView"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginTop="47dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:padding="10dp"
        android:max="100"
        android:progress="50"
        android:indeterminate="false"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/desired_grade_editText"
        android:layout_alignEnd="@+id/desired_grade_editText"
        android:layout_toEndOf="@+id/seekbarTextView"
        android:layout_alignLeft="@+id/desired_grade_editText"
        android:layout_alignStart="@+id/desired_grade_editText" />

    <TextView
        android:text="@string/seekbar_percentView"
        android:id="@+id/seekbarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/desired_grade_editText"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

</RelativeLayout>
